--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							</div>
 							<div class="order_forms_input">
 								<input type="text" placeholder="Ваше имя" id="name" />
-								<input type="tel" placeholder="Ваш телефон" id="phone" />
+								<input type="tel" placeholder="Ваш телефон" id="phone"  maxlength="11"/>
 								<button
 									id="order_action"
 									class="button violet_btn"
